gclb/multi-path/k8s/deployment-service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1
  labels:
    app: service1
spec:
  ports:
  - name: http
    port: 5000
  selector:
    app: service1
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service1
        version: v1
    spec:
      containers:
      - image: gcr.io/kenthua-sharing/python-web-service
        imagePullPolicy: Always
        name: service1
        ports:
        - containerPort: 5000
