gclb/multi-path/k8s/deployment-service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service2
  labels:
    app: service2
spec:
  ports:
  - name: http
    port: 5000
  selector:
    app: service2
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service2
        version: v1
    spec:
      containers:
      - image: gcr.io/kenthua-testing/python-web
        imagePullPolicy: Always
        name: service2
        ports:
        - containerPort: 5000
